--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "v-mask": "^2.0.2",
         "vue": "^2.6.10",
         "vue-i18n": "^8.0.0",
+        "vue-moment": "^4.0.0",
         "vue-router": "^3.1.3",
         "vuex": "^3.0.1"
     },
