--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "rules": {
             "no-unused-vars": "off",
             "no-undef": "off",
-            "no-console": "error"
+            "no-console": "off"
         },
         "parserOptions": {
             "parser": "babel-eslint"
