--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
     },
     "dependencies": {
         "@chenfengyuan/vue-qrcode": "^1.0.1",
-        "axios": "^0.19.0",
-        "core-js": "^3.4.3",
-        "vue": "^2.6.10",
-        "vue-i18n": "^8.0.0",
-        "vue-router": "^3.1.3",
+        "axios": "^0.19.2",
+        "core-js": "^3.6.5",
+        "vue": "^2.6.11",
+        "vue-i18n": "^8.17.3",
+        "vue-router": "^3.2.0",
         "vue-the-mask": "^0.11.1",
-        "vuex": "^3.1.2"
+        "vuex": "^3.4.0"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "^4.1.0",
-        "@vue/cli-plugin-eslint": "^4.1.0",
-        "@vue/cli-plugin-router": "^4.1.0",
-        "@vue/cli-plugin-vuex": "^4.1.0",
-        "@vue/cli-service": "^4.1.0",
-        "@vue/eslint-config-prettier": "^5.0.0",
-        "babel-eslint": "^10.0.3",
-        "eslint": "^5.16.0",
-        "eslint-plugin-prettier": "^3.1.1",
-        "eslint-plugin-vue": "^5.0.0",
+        "@vue/cli-plugin-babel": "~4.4.0",
+        "@vue/cli-plugin-eslint": "~4.4.0",
+        "@vue/cli-plugin-router": "~4.4.0",
+        "@vue/cli-plugin-vuex": "~4.4.0",
+        "@vue/cli-service": "~4.4.0",
+        "@vue/eslint-config-prettier": "^6.0.0",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-vue": "^6.2.2",
         "node-sass": "^4.12.0",
         "prettier": "^1.19.1",
-        "sass-loader": "^8.0.0",
-        "vue-cli-plugin-i18n": "^0.6.0",
-        "vue-template-compiler": "^2.6.10"
+        "sass-loader": "^8.0.2",
+        "vue-cli-plugin-i18n": "~1.0.1",
+        "vue-template-compiler": "^2.6.11"
     },
     "eslintConfig": {
         "root": true,
